--- a/latex/header.tex
+++ b/latex/header.tex
@@ -21,6 +21,7 @@
 
 % Fonteinstellungen
 \usepackage{fontspec}
+\setmainfont{Arial}
 % Latin Modern Fonts werden automatisch geladen
 % Alternativ zum Beispiel:
 %\setromanfont{Libertinus Serif}
