--- a/latex/content/task1.tex
+++ b/latex/content/task1.tex
@@ -1,6 +1,6 @@
 \section{Aufgabe 1}
 \subsection{Aufgabe 1 a)}
-Die initiale Spotbreite des Protonenstrahls bestimmt sich aus der \enquote{FWHM} größe, die durch python Methoden abgelesen werden kann.
+Die initiale Spotbreite des Protonenstrahls bestimmt sich aus der \enquote{FWHM} Größe, die durch python Methoden abgelesen werden kann.
 Hierfür wurde eine Maske erstellt mit einer Epsilonumgebung von $0.01$ und
 \begin{verbatim}
     eps = 0.01
