--- a/latex/content/task2.tex
+++ b/latex/content/task2.tex
@@ -10,6 +10,7 @@ Hierbei wird darauf geachtet, inerhalb des Zylinders zu agieren um die umliegend
     \includegraphics[width= 0.8\textwidth]{content/iso.png}
     \caption{Abgebildet sind die Isodosislinien eines CT Datensatz bei einer Bestrahlung mit einem Protonenstahl in der Pencil Beam Scanning
     Methode.}
+    \label{fig:iso}
 \end{figure}
 Mit dem Simulationswekzeug von \enquote{TOPAS} werden so mehrer Protonen an entsprechender Stelle simuliert wobei die Teilchenanzahl in einer Größenordnung 
 von insgesamt $10^7$ liegt. So werden statistische Fehler minimiert. Die deponierte Dosis kann in \enquote{Slicer3D} ausgelesen,
@@ -29,10 +30,5 @@ Unterschreitung der Richtlinie von einer maximal Dosis $50 Gy$ und $D_{10\%} < 1
 Von diesen Richtlinien jedoch abgesehen würde sich die Behandlung bei einem Patienten nicht durchsetzten können. 
 Die maximale Dosis, abgelesen in \ref{fig:slicer} würde zu einer direkten Nekrose führen und der Heilungsprozess wäre maßgeblich 
 eingeschrkänkt. Zu dem werden lediglich $\approx 42\%$ mit $60Gy$ abgedeckt, was in einem klinischen Standart über $95\%$ liegen sollte.
-
-%\begin{figure}
-%    \centering
-%    \includegraphics[width  = 0.8\textwidth]{../poject/task2/DVH.pdf}
-%    \caption{Abgebildet ist ein Dosis Volumen Histogram eines klinischen Volumen und zwei Risikoorgane.}
-%    \label{fig:dvh}
-%\end{figure}
+Alternativ kann in der Planung mit etwaigen Filtern gearbeitet, oder eine Vielfelderplaung etabliert werden
+\newpage
