--- a/latex/main.tex
+++ b/latex/main.tex
@@ -15,6 +15,8 @@
 %\input{content/Vorbereitung.tex}
 \input{content/task1.tex}
 \input{content/task2.tex}
+\input{content/task3.tex}
+
 
 
 %\input{content/Meßwerte.tex}
